// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders button with an accessibility hint 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityHint="hint"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Button with accessibility hint
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders button with an accessibility label 1`] = `
<View
  accessibilityLabel="label"
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Button with accessibility label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders button with button color 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "#e91e63",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "#e91e63",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "#e91e63",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Custom Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders button with color 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "#e91e63",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Custom Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders button with custom testID 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
      testID="custom:testID"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Button with custom testID
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders button with icon 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <View>
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            camera
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Icon Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders button with icon in reverse order 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            {
              "flexDirection": "row-reverse",
            },
          ]
        }
      >
        <View>
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            chevron-right
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Right Icon
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders disabled button 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "transparent",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "transparent",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 20,
          },
          {
            "backgroundColor": "rgba(29, 27, 32, 1)",
            "opacity": 0.1,
          },
        ]
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 0.38,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Disabled Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders filled button by default 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Filled Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders filled button with mode 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Contained Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders loading button 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <View
          accessible={true}
          aria-busy={true}
          role="progressbar"
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 20,
                "opacity": 1,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 20,
                    "transform": [
                      {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 10,
                      "overflow": "hidden",
                      "width": 20,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 20,
                        "transform": [
                          {
                            "translateY": 0,
                          },
                          {
                            "rotate": "-165deg",
                          },
                        ],
                        "width": 20,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 10,
                          "overflow": "hidden",
                          "width": 20,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "rgba(255, 255, 255, 1)",
                            "borderRadius": 10,
                            "borderWidth": 2,
                            "height": 20,
                            "width": 20,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 20,
                    "transform": [
                      {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 10,
                      "overflow": "hidden",
                      "top": 10,
                      "width": 20,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 20,
                        "transform": [
                          {
                            "translateY": -10,
                          },
                          {
                            "rotate": "345deg",
                          },
                        ],
                        "width": 20,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 10,
                          "overflow": "hidden",
                          "width": 20,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "rgba(255, 255, 255, 1)",
                            "borderRadius": 10,
                            "borderWidth": 2,
                            "height": 20,
                            "width": 20,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Loading Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders outlined button with mode 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "transparent",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "transparent",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "rgba(202, 196, 208, 1)",
          "borderWidth": 1,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 19,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 38,
              "paddingEnd": 15,
              "paddingStart": 15,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(73, 69, 79, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Outlined Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders text button with mode 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "transparent",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 20,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "transparent",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 20,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 20,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 40,
              "paddingEnd": 16,
              "paddingStart": 16,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(103, 80, 164, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Text Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`size prop renders a button with per-size metrics 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "minWidth": 64,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(103, 80, 164, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 28,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 28,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderStyle": "solid",
        },
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        {
          "borderRadius": 28,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 0,
          "right": 0,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 28,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            false,
            {
              "gap": 8,
              "minHeight": 56,
              "paddingEnd": 24,
              "paddingStart": 24,
            },
            {
              "opacity": 1,
            },
            undefined,
          ]
        }
      >
        <View>
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            camera
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0.15,
                  "lineHeight": 24,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "letterSpacing": 0.15,
                    "lineHeight": 24,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Medium
        </Text>
      </View>
    </View>
  </View>
</View>
`;
